--- a/index.html
+++ b/index.html
@@ -1,27 +1,57 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Hank Quinlan, Horrible Cop</title>
+		<title>Arvind Kumar Yadav, Resume</title>
 	</head>
 	<body>
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
         		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+        		<h1>Hi there, I'm Arvind Kumar Yadav!</h1>
+				<p>Experienced Senior Android Developer | 7+ Years of Mobile App Expertise | Java, Kotlin, Android Jetpack, MVVM, Jira, Git | Strong Problem-Solving & Collaboration Skills.. <a href="/about">Read more about my life...</a></p>
+
+
+<h1> Senior Android Developer </h1>
+
+			<h1> <b>Experience</b> </h1>
+<h1> <a href="https://www.dewsolutions.in/"> Dew Solutions Pvt Ltd  </h1>
+			<h2> Senior Android Developer  </h2>
+			<h3> - Designing, Developing advanced mobile applications Unit-testing code for robustness, including edge cases, usability, and general reliability, Bug fixing and improving application performance.  </h2>
+
+			<h1> <b>Education</b> </h1>
+			<h1> Uttar Pradesh Technical University </h1>
+<h1> Bachelor's in Computer Science and Engineering </h1>
+			
+						<h1> Skills</h1>
+			<ul>
+				<li> Android Application Developent </li>
+        		<li> Java </li>
+				<li> Kotlin </li>
+				<li> Android Jetpack Compose </li>
+<li> MVVM </li>
+<li> Dagger </li>
+<li> Git </li>
+<li> Unit Testing </li>
+<li> Jira </li>
+<li> Third party libraries integration </li>
+			</ul>
+
+			
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
-    		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+
+
+
+			    		<ul>
+        		<li><a href="mailto:akyadav020190@gmail.com">Email - akyadav020190@gmail.com</a></li>
+        		<li><a href="https://www.linkedin.com/in/arvind-yadav-0a50b341/">linkedin.com/in/arvind</a></li>
 			</ul>
 		</footer>
 	</body>
